--- a/src/app/components/form-array-concepts/form-array-concepts.component.css
+++ b/src/app/components/form-array-concepts/form-array-concepts.component.css
@@ -1,3 +1,18 @@
-body{
-    border:2px solid red;
+.color{
+    border:2px solid black;
+    margin:10px;
+    padding: 5px;
+    background-color: wheat;
+}
+.version{
+    border:2px solid black;
+    background-color: antiquewhite;
+    margin:10px;
+    padding: 5px
+}
+.wholeForm{
+    border:2px solid black;
+    margin:10px;
+    padding: 5px;  
+    background-color: azure;
 }
